<resources>
    <string name="app_name">weather_app</string>
    <string name="input_city">input city</string>
    <string name="temperature">temperature</string>
    <string name="wind_speed">wind speed</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="city">City</string>
    <string name="save_home_city">save home city</string>
    <string name="delete_home_city">delete</string>
    <string name="error">ERROR!</string>
    <string name="geo_coords">Geo coords</string>
</resources>
